--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ site_title: Threadly - High performance java libraries
 company_name: Threadly
 # this appears in the footer
 
-github_editme_path: threadly/threadly/blob/gh-pages/
+# github_editme_path: threadly/threadly/blob/gh-pages/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-# gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
+# gitlab_editme_path: threadly/threadly/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 google_analytics: 
