--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -3,13 +3,11 @@
 # In other words, the last line must be the last tag in the allowed-tags list.
 allowed-tags:
   - getting_started
-  - content_types
-  - navigation
-  - formatting
-  - publishing
-  - single_sourcing
-  - special_layouts
-  - collaboration
   - news
+  - release
+  - release-threadly
+  - release-test
+  - release-auroraArc
+  - release-ambush
+  - release-litesockets
   - troubleshooting
-  - mobile
