--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -9,14 +9,14 @@ entries:
     output: web
     folderitems:
     - title: News
-      url: /news.html
+      url: news.html
       output: web
 
   - title: GitHub Projects
     output: web
     folderitems:
     - title: Threadly
-      url: "https://github.com/threadly/threadly"
+      url: https://github.com/threadly/threadly
       output: web
     - title: Threadly-Test
       url: https://github.com/threadly/threadly-test
@@ -35,7 +35,7 @@ entries:
     output: web
     folderitems:
     - title: Threadly
-      url: /javadocs/5.43/index.html
+      url: javadocs/5.43/index.html
       output: web
     - title: Threadly-Test
       url: https://threadly.github.io/threadly-test/javadocs/0.1/
@@ -49,44 +49,3 @@ entries:
     - title: Ambush
       url: https://github.com/threadly/ambush
       output: web
-
-  - title: Tag archives
-    output: web
-    folderitems:
-
-    - title: Tag archives overview
-      url: /mydoc_tag_archives_overview.html
-      output: web
-
-      subfolders:
-      - title: Tag archive pages
-        output: web
-        subfolderitems:
-
-        - title: Formatting pages
-          url: /tag_formatting.html
-          output: web
-
-        - title: Navigation pages
-          url: /tag_navigation.html
-          output: web
-
-        - title: Content types pages
-          url: /tag_content_types.html
-          output: web
-
-        - title: Publishing pages
-          url: /tag_publishing.html
-          output: web
-
-        - title: Special layout pages
-          url: /tag_special_layouts.html
-          output: web
-
-        - title: Collaboration pages
-          url: /tag_collaboration.html
-          output: web
-
-        - title: Troubleshooting pages
-          url: /tag_troubleshooting.html
-          output: web
