Add links for zulip chat on homepage

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -11,6 +11,9 @@ entries:
     - title: News
       url: news.html
       output: web
+    - title: Discussion
+      url: https://threadly.zulipchat.com
+      output: web
     - title: Threadly Wiki
       url: https://github.com/threadly/threadly/wiki
       output: web
